Add stop functions and separate results computation from simulation
and Move checkpoint simulation driver into own class