@@ -3,10 +3,14 @@ package gov.nasa.jpl.aerie.foomissionmodel;
 import gov.nasa.jpl.aerie.foomissionmodel.generated.GeneratedModelType;
 import gov.nasa.jpl.aerie.merlin.driver.ActivityDirective;
 import gov.nasa.jpl.aerie.merlin.driver.ActivityDirectiveId;
+import gov.nasa.jpl.aerie.merlin.driver.CachedEngineStore;
 import gov.nasa.jpl.aerie.merlin.driver.DirectiveTypeRegistry;
 import gov.nasa.jpl.aerie.merlin.driver.MissionModel;
 import gov.nasa.jpl.aerie.merlin.driver.MissionModelBuilder;
+import gov.nasa.jpl.aerie.merlin.driver.CheckpointSimulationDriver;
+import gov.nasa.jpl.aerie.merlin.driver.MissionModelId;
 import gov.nasa.jpl.aerie.merlin.driver.SimulationDriver;
+import gov.nasa.jpl.aerie.merlin.driver.SimulationEngineConfiguration;
 import gov.nasa.jpl.aerie.merlin.driver.SimulationResults;
 import gov.nasa.jpl.aerie.merlin.driver.timeline.CausalEventSource;
 import gov.nasa.jpl.aerie.merlin.driver.timeline.LiveCells;
@@ -29,10 +33,12 @@ import gov.nasa.jpl.aerie.merlin.protocol.types.ValueSchema;
 import org.apache.commons.lang3.tuple.Pair;
 import org.apache.commons.lang3.tuple.Triple;
 import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.time.Instant;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.TreeMap;
@@ -45,6 +51,36 @@ import static gov.nasa.jpl.aerie.merlin.protocol.types.Duration.SECONDS;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class SimulationDuplicationTest {
+  CachedEngineStore store;
+  final private class InfiniteCapacityEngineStore implements CachedEngineStore{
+    private final Map<SimulationEngineConfiguration, List<CheckpointSimulationDriver.CachedSimulationEngine>> store = new HashMap<>();
+    @Override
+    public void save(
+        final CheckpointSimulationDriver.CachedSimulationEngine cachedSimulationEngine,
+        final SimulationEngineConfiguration configuration) {
+      store.computeIfAbsent(configuration, conf -> new ArrayList<>());
+      store.get(configuration).add(cachedSimulationEngine);
+    }
+
+    @Override
+    public List<CheckpointSimulationDriver.CachedSimulationEngine> getCachedEngines(final SimulationEngineConfiguration configuration) {
+      return store.get(configuration);
+    }
+  }
+
+  public static SimulationEngineConfiguration mockConfiguration(){
+    return new SimulationEngineConfiguration(
+        Map.of(),
+        Instant.EPOCH,
+        new MissionModelId(0)
+    );
+  }
+
+  @BeforeEach
+  void beforeEach(){
+    this.store = new InfiniteCapacityEngineStore();
+  }
+
   @BeforeAll
   static void beforeAll() {
     ThreadedTask.CACHE_READS = true;
@@ -65,7 +101,8 @@ public class SimulationDuplicationTest {
         Instant.EPOCH,
         Duration.HOUR,
         Instant.EPOCH,
-        Duration.HOUR);
+        Duration.HOUR,
+        () -> false);
     final List<Triple<Integer, String, ValueSchema>> standardTopics = List.of(
         Triple.of(
             0,
@@ -97,9 +134,13 @@ public class SimulationDuplicationTest {
 
   @Test
   void testTrivialDuplicate() {
-    final SimulationDriver.SimulationResultsWithCheckpoints results = simulateWithCheckpoints(
+    final SimulationResults results = simulateWithCheckpoints(
         missionModel,
-        SimulationDriver.CachedSimulationEngine.empty(missionModel), List.of(Duration.of(5, MINUTES)), Map.of()
+        CheckpointSimulationDriver.CachedSimulationEngine.empty(missionModel),
+        List.of(Duration.of(5, MINUTES)),
+        Map.of(),
+        store,
+        mockConfiguration()
     );
     final SimulationResults expected = SimulationDriver.simulate(
         missionModel,
@@ -108,13 +149,18 @@ public class SimulationDuplicationTest {
         Duration.HOUR,
         Instant.EPOCH,
         Duration.HOUR,
+        () -> false,
         $ -> {});
-    assertResultsEqual(expected, results.results());
-    final SimulationDriver.SimulationResultsWithCheckpoints newResults = simulateWithCheckpoints(
+    assertResultsEqual(expected, results);
+    final var newResults = simulateWithCheckpoints(
         missionModel,
-        results.checkpoints().get(0), List.of(), Map.of()
+        store.getCachedEngines(mockConfiguration()).get(0),
+        List.of(),
+        Map.of(),
+        store,
+        mockConfiguration()
     );
-    assertResultsEqual(expected, newResults.results());
+    assertResultsEqual(expected, newResults);
   }
 
   @Test
@@ -123,10 +169,12 @@ public class SimulationDuplicationTest {
         new MissionModelBuilder(),
         Instant.EPOCH,
         new Configuration());
-    final SimulationDriver.SimulationResultsWithCheckpoints results = simulateWithCheckpoints(
+    final var results = simulateWithCheckpoints(
         missionModel,
         List.of(Duration.of(5, MINUTES)),
-        Map.of()
+        Map.of(),
+        store,
+        mockConfiguration()
     );
     final SimulationResults expected = SimulationDriver.simulate(
         missionModel,
@@ -135,8 +183,9 @@ public class SimulationDuplicationTest {
         Duration.HOUR,
         Instant.EPOCH,
         Duration.HOUR,
+        () -> false,
         $ -> {});
-    assertResultsEqual(expected, results.results());
+    assertResultsEqual(expected, results);
   }
 
   @Test
@@ -149,10 +198,12 @@ public class SimulationDuplicationTest {
         activity(1, MINUTE, "foo", Map.of("z", SerializedValue.of(123))),
         activity(7, MINUTES, "foo", Map.of("z", SerializedValue.of(999)))
     );
-    final SimulationDriver.SimulationResultsWithCheckpoints results = simulateWithCheckpoints(
+    final var results = simulateWithCheckpoints(
         missionModel,
         List.of(Duration.of(5, MINUTES)),
-        schedule
+        schedule,
+        store,
+        mockConfiguration()
     );
     final SimulationResults expected = SimulationDriver.simulate(
         missionModel,
@@ -161,19 +212,22 @@ public class SimulationDuplicationTest {
         Duration.HOUR,
         Instant.EPOCH,
         Duration.HOUR,
+        () -> false,
         $ -> {});
-    assertResultsEqual(expected, results.results());
+    assertResultsEqual(expected, results);
 
-    assertEquals(Duration.of(5, MINUTES), results.checkpoints().get(0).startOffset());
+    assertEquals(Duration.of(5, MINUTES), store.getCachedEngines(mockConfiguration()).getFirst().endsAt());
 
-    final SimulationDriver.SimulationResultsWithCheckpoints results2 = simulateWithCheckpoints(
+    final var results2 = simulateWithCheckpoints(
         missionModel,
-        results.checkpoints().get(0),
+        store.getCachedEngines(mockConfiguration()).get(0),
         List.of(Duration.of(5, MINUTES)),
-        schedule
+        schedule,
+        store,
+        mockConfiguration()
     );
 
-    assertResultsEqual(expected, results2.results());
+    assertResultsEqual(expected, results2);
   }
 
   @Test
@@ -186,10 +240,12 @@ public class SimulationDuplicationTest {
         activity(1, MINUTE, "foo", Map.of("z", SerializedValue.of(123))),
         activity(7, MINUTES, "foo", Map.of("z", SerializedValue.of(999)))
     );
-    final SimulationDriver.SimulationResultsWithCheckpoints results = simulateWithCheckpoints(
+    final var results = simulateWithCheckpoints(
         missionModel,
         List.of(Duration.of(5, MINUTES)),
-        schedule
+        schedule,
+        store,
+        mockConfiguration()
     );
     final SimulationResults expected = SimulationDriver.simulate(
         missionModel,
@@ -198,28 +254,33 @@ public class SimulationDuplicationTest {
         Duration.HOUR,
         Instant.EPOCH,
         Duration.HOUR,
+        () -> false,
         $ -> {});
-    assertResultsEqual(expected, results.results());
+    assertResultsEqual(expected, results);
 
-    assertEquals(Duration.of(5, MINUTES), results.checkpoints().get(0).startOffset());
+    assertEquals(Duration.of(5, MINUTES), store.getCachedEngines(mockConfiguration()).getFirst().endsAt());
 
-    final SimulationDriver.SimulationResultsWithCheckpoints results2 = simulateWithCheckpoints(
+    final var results2 = simulateWithCheckpoints(
         missionModel,
-        results.checkpoints().get(0),
+        store.getCachedEngines(mockConfiguration()).getFirst(),
         List.of(Duration.of(5, MINUTES)),
-        schedule
+        schedule,
+        store,
+        mockConfiguration()
     );
 
-    assertResultsEqual(expected, results2.results());
+    assertResultsEqual(expected, results2);
 
-    final SimulationDriver.SimulationResultsWithCheckpoints results3 = simulateWithCheckpoints(
+    final var results3 = simulateWithCheckpoints(
         missionModel,
-        results.checkpoints().get(0),
+        store.getCachedEngines(mockConfiguration()).getFirst(),
         List.of(Duration.of(5, MINUTES)),
-        schedule
+        schedule,
+        store,
+        mockConfiguration()
     );
 
-    assertResultsEqual(expected, results3.results());
+    assertResultsEqual(expected, results3);
   }
 
   @Test
@@ -232,10 +293,12 @@ public class SimulationDuplicationTest {
         activity(1, MINUTE, "foo", Map.of("z", SerializedValue.of(123))),
         activity(7, MINUTES, "foo", Map.of("z", SerializedValue.of(999)))
     );
-    final SimulationDriver.SimulationResultsWithCheckpoints results = simulateWithCheckpoints(
+    final var results = simulateWithCheckpoints(
         missionModel,
         List.of(Duration.of(5, MINUTES), Duration.of(6, MINUTES)),
-        schedule
+        schedule,
+        store,
+        mockConfiguration()
     );
     final SimulationResults expected = SimulationDriver.simulate(
         missionModel,
@@ -244,28 +307,33 @@ public class SimulationDuplicationTest {
         Duration.HOUR,
         Instant.EPOCH,
         Duration.HOUR,
+        () -> false,
         $ -> {});
-    assertResultsEqual(expected, results.results());
+    assertResultsEqual(expected, results);
 
-    assertEquals(Duration.of(5, MINUTES), results.checkpoints().get(0).startOffset());
+    assertEquals(Duration.of(5, MINUTES), store.getCachedEngines(mockConfiguration()).getFirst().endsAt());
 
-    final SimulationDriver.SimulationResultsWithCheckpoints results2 = simulateWithCheckpoints(
+    final var results2 = simulateWithCheckpoints(
         missionModel,
-        results.checkpoints().get(0),
+        store.getCachedEngines(mockConfiguration()).getFirst(),
         List.of(Duration.of(5, MINUTES), Duration.of(6, MINUTES)),
-        schedule
+        schedule,
+        store,
+        mockConfiguration()
     );
 
-    assertResultsEqual(expected, results2.results());
+    assertResultsEqual(expected, results2);
 
-    final SimulationDriver.SimulationResultsWithCheckpoints results3 = simulateWithCheckpoints(
+    final var results3 = simulateWithCheckpoints(
         missionModel,
-        results.checkpoints().get(1),
+        store.getCachedEngines(mockConfiguration()).get(1),
         List.of(Duration.of(5, MINUTES), Duration.of(6, MINUTES)),
-        schedule
+        schedule,
+        store,
+        mockConfiguration()
     );
 
-    assertResultsEqual(expected, results3.results());
+    assertResultsEqual(expected, results3);
   }
 
   @Test
@@ -287,10 +355,12 @@ public class SimulationDuplicationTest {
         activity1,
         activity(390, SECONDS, "foo", Map.of("z", SerializedValue.of(999)))
     );
-    final SimulationDriver.SimulationResultsWithCheckpoints results = simulateWithCheckpoints(
+    final var results = simulateWithCheckpoints(
         missionModel,
         List.of(Duration.of(5, MINUTES), Duration.of(6, MINUTES)),
-        schedule1
+        schedule1,
+        store,
+        mockConfiguration()
     );
     final SimulationResults expected1 = SimulationDriver.simulate(
         missionModel,
@@ -299,6 +369,7 @@ public class SimulationDuplicationTest {
         Duration.HOUR,
         Instant.EPOCH,
         Duration.HOUR,
+        () -> false,
         $ -> {});
 
     final SimulationResults expected2 = SimulationDriver.simulate(
@@ -308,28 +379,33 @@ public class SimulationDuplicationTest {
         Duration.HOUR,
         Instant.EPOCH,
         Duration.HOUR,
+        () -> false,
         $ -> {});
 
-    assertResultsEqual(expected1, results.results());
+    assertResultsEqual(expected1, results);
 
-    assertEquals(Duration.of(5, MINUTES), results.checkpoints().get(0).startOffset());
+    assertEquals(Duration.of(5, MINUTES), store.getCachedEngines(mockConfiguration()).getFirst().endsAt());
 
-    final SimulationDriver.SimulationResultsWithCheckpoints results2 = simulateWithCheckpoints(
+    final var results2 = simulateWithCheckpoints(
         missionModel,
-        results.checkpoints().get(0),
+        store.getCachedEngines(mockConfiguration()).getFirst(),
         List.of(Duration.of(5, MINUTES), Duration.of(6, MINUTES)),
-        schedule2
+        schedule2,
+        store,
+        mockConfiguration()
     );
-    assertResultsEqual(expected2, results2.results());
+    assertResultsEqual(expected2, results2);
 
-    final SimulationDriver.SimulationResultsWithCheckpoints results3 = simulateWithCheckpoints(
+    final SimulationResults results3 = simulateWithCheckpoints(
         missionModel,
-        results.checkpoints().get(1),
+        store.getCachedEngines(mockConfiguration()).get(1),
         List.of(Duration.of(5, MINUTES), Duration.of(6, MINUTES)),
-        schedule2
+        schedule2,
+        store,
+        mockConfiguration()
     );
 
-    assertResultsEqual(expected2, results3.results());
+    assertResultsEqual(expected2, results3);
   }
 
   private static long nextActivityDirectiveId = 0L;
@@ -387,13 +463,15 @@ public class SimulationDuplicationTest {
     assertEquals(expected, actual);
   }
 
-  static SimulationDriver.SimulationResultsWithCheckpoints simulateWithCheckpoints(
+  static SimulationResults simulateWithCheckpoints(
       final MissionModel<?> missionModel,
-      final SimulationDriver.CachedSimulationEngine cachedSimulationEngine,
+      final CheckpointSimulationDriver.CachedSimulationEngine cachedSimulationEngine,
       final List<Duration> desiredCheckpoints,
-      final Map<ActivityDirectiveId, ActivityDirective> schedule
+      final Map<ActivityDirectiveId, ActivityDirective> schedule,
+      final CachedEngineStore cachedEngineStore,
+      final SimulationEngineConfiguration simulationEngineConfiguration
   ) {
-    return SimulationDriver.simulateWithCheckpoints(
+    return CheckpointSimulationDriver.computeResults(CheckpointSimulationDriver.simulateWithCheckpoints(
         missionModel,
         schedule,
         Instant.EPOCH,
@@ -401,16 +479,22 @@ public class SimulationDuplicationTest {
         Instant.EPOCH,
         Duration.HOUR,
         $ -> {},
+        () -> false,
         cachedSimulationEngine,
-        SimulationDriver.desiredCheckpoints(desiredCheckpoints));
+        CheckpointSimulationDriver.desiredCheckpoints(desiredCheckpoints),
+        CheckpointSimulationDriver.noCondition(),
+        cachedEngineStore,
+        simulationEngineConfiguration));
   }
 
-  static SimulationDriver.SimulationResultsWithCheckpoints simulateWithCheckpoints(
+  static SimulationResults simulateWithCheckpoints(
       final MissionModel<?> missionModel,
       final List<Duration> desiredCheckpoints,
-      final Map<ActivityDirectiveId, ActivityDirective> schedule
+      final Map<ActivityDirectiveId, ActivityDirective> schedule,
+      final CachedEngineStore cachedEngineStore,
+      final SimulationEngineConfiguration simulationEngineConfiguration
   ) {
-    return SimulationDriver.simulateWithCheckpoints(
+    return CheckpointSimulationDriver.computeResults(CheckpointSimulationDriver.simulateWithCheckpoints(
         missionModel,
         schedule,
         Instant.EPOCH,
@@ -418,8 +502,12 @@ public class SimulationDuplicationTest {
         Instant.EPOCH,
         Duration.HOUR,
         $ -> {},
-        SimulationDriver.CachedSimulationEngine.empty(missionModel),
-        SimulationDriver.desiredCheckpoints(desiredCheckpoints));
+        () -> false,
+        CheckpointSimulationDriver.CachedSimulationEngine.empty(missionModel),
+        CheckpointSimulationDriver.desiredCheckpoints(desiredCheckpoints),
+        CheckpointSimulationDriver.noCondition(),
+        cachedEngineStore,
+        simulationEngineConfiguration));
   }
 
   private static final Topic<Object> delayedActivityDirectiveInputTopic = new Topic<>();
